@@ -13,6 +13,8 @@ What's New in Python 2.4.5c1?
 Core and builtins
 -----------------
 
+- patch #1630975: Fix crash when replacing sys.stdout in sitecustomize.py
+
 - Bug #1590891: random.randrange don't return correct value for big number
 
 - Bug #1542016: make sys.callstats() match its docstring and return an
